Update the C++ API: * Change edges() to expose the symbolic EdgeTree instead of an explicit flat array and remove successors(). * Provide a quality score for states describing how close they are to reaching satisfaction, e.g. `true`.